--- a/Expertis.Application.ERP.MntoActivo.vbproj
+++ b/Expertis.Application.ERP.MntoActivo.vbproj
@@ -266,6 +266,12 @@
     <Compile Include="MntoControlArticulosNSerie.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="MntoControlEpis.Designer.vb">
+      <DependentUpon>MntoControlEpis.vb</DependentUpon>
+    </Compile>
+    <Compile Include="MntoControlEpis.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="MntoCrearNumerosDeSerie.Designer.vb">
       <DependentUpon>MntoCrearNumerosDeSerie.vb</DependentUpon>
     </Compile>
@@ -329,6 +335,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MntoControlArticulosNSerie.resx">
       <DependentUpon>MntoControlArticulosNSerie.vb</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MntoControlEpis.resx">
+      <DependentUpon>MntoControlEpis.vb</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="MntoCrearNumerosDeSerie.resx">
